--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kaarthic Pulogarajah</title>
+	<title>Experience</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,11 +18,11 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
 
 	<p class = "titleP">Experience</p>
 	<p class = "padP"></p>
-	<div class = "boxP" style="width: 100%; padding-bottom: 12%;">
+	<div class = "boxP" style="width: 100%; padding-bottom: 11%;">
 	<a target="_blank" class="link" href="resume.pdf"><img class="logo" src="img/adobe.png">Resume</a><br>
 	<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img class="logo" src="img/linkedin.png">LinkedIn</a><br>
 	<a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img class="logo" src="img/github.png">Github</a><br>
