--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
 	<title>Kaarthic Pulogarajah</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name= "keywords" content="Kaarthic Pulogarajah, Kaarthic Pulo">
+	<meta name= "description" content="Here you will find find a collection of my projects and designs - some academic, and some just for fun">
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 		<header>
-
-
-
-
 		</header>
 		<body>
 		<main>
+
+
 				<div class="container">
 				 	<img class = "back" src="img/background2.jpg">
 				</div>
 
-				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
 
 				<div id="block">
 				<p class="iam">I am a <br> </p>
-			 	<div><p class="title"> Mechanical Designer</p></div>
+			 	<div><p class="title"> Mechanical Engineer</p></div>
 			 	<a href="portfolio.html" class="button1">Portfolio</a>
 			 	<a href="experience.html" class="button2">Experience</a>
 			 	</div>
