--- a/matlab.html
+++ b/matlab.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kaarthic Pulogarajah</title>
+	<title>MATLAB Projects</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,15 +17,15 @@
 <body>
 <main>
 
-		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
 
-		<p class = "titleP">Matlab Projects</p>
+		<p class = "titleP">MATLAB Projects</p>
 		<p class = "padP"></p>
 
 		<div class = "boxP" id="matbox">
 
 		<span class="cont">
-			<a href="planetsim.html"><img class = "portpics" src="img/planetsim1.png"></a>
+			<a href="planetsim.html"><img class = "portpics" src="img/planets.jpg"></a>
 			<p class="cent">Planets Simulation</p>
 		</span>
 		<span class="portpad"></span>
