--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kaarthic Pulogarajah</title>
+	<title>Portfolio</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,13 +17,7 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience    </span></a> <span><img class= "downbutton"  src="img/downbutton2.png" onclick="scroll()"></span></div>
-		<script>
-		function scroll() {
-		    window.scrollBy(0, 1000);
-		    
-		}
-		</script>
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
 
 	<p class = "titleP">Portfolio</p>
 	<p class = "padP"></p>
@@ -38,7 +32,7 @@
 
 		<span class="cont">
 			<a href="matlab.html"><img class = "portpics" src="img/matlabicon.png"></a>
-			<p class="cent">Matlab Projects</p>
+			<p class="cent">MATLAB Projects</p>
 		</span>
 		<span class="portpad"></span>
 		
