--- a/3d.html
+++ b/3d.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kaarthic Pulogarajah</title>
+	<title>3D Modelling</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,11 +17,10 @@
 <body>
 <main>
 
-		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
 
 		<p class = "titleP">3D Modelling</p>
 		<p class = "padP"></p>
-
 		<div class = "boxP">
 		<!-- <div class="col"> -->
 			<div class="cont">
@@ -218,8 +217,6 @@
 			</div>
 		<span></span>
 		</div>
-
-
 </main>
 <footer></footer>
 </body>
