--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Kaarthic Pulogarajah</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<meta name= "keywords" content="Kaarthic Pulogarajah, Kaarthic Pulo">
-	<meta name= "description" content="Here you will find find a collection of my projects and designs - some academic, and some just for fun">
+	<meta name="keywords" content="Kaarthic Pulogarajah, Kaarthic Pulo">
+	<meta name="description" content="Here you will find find a collection of my projects and designs - some academic, and some just for fun">
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
@@ -15,7 +15,7 @@
 		<body>
 		<main>
 
-
+				<h1 style="display:none">kaarthic pulogarajah</h1>
 				<div class="container">
 				 	<img class = "back" src="img/background2.jpg">
 				</div>
