Images reduced in size
- images made smaller to reduce load time
- padding changed in experience and matlab pages

--- a/matlab.html
+++ b/matlab.html
@@ -30,8 +30,14 @@
 		</span>
 		<span class="portpad"></span>
 
+		<span class="cont">
+			<a href=""><img class = "portpics" src="img/planepic.jpg"></a>
+			<p class="cent">Flight Path</p>
+		</span>
+		<span class="portpad"></span>
 
-			</div>
+
+		</div>
 
 		<span></span>
 		</div>
