Mostly appearance changes
-Added hidden image to matlab
-Added tea infusers image
-Added pdf folder

--- a/3d.html
+++ b/3d.html
@@ -24,8 +24,8 @@
 		<div class = "boxP">
 		<!-- <div class="col"> -->
 			<div class="cont">
-				<img id = "portpic6" src="img/fsaecar.png">
-				<p class="cent">Formula Motorsports</p>
+				<img id = "portpic6" src="img/tea3.png">
+				<p class="cent">Tea Infuser Set</p>
 
 				<div id="myModal6" class="modal">
 				  <span class="close">&times;</span>
