--- a/fridge.html
+++ b/fridge.html
@@ -42,7 +42,7 @@
 
 	<p class="text">To demonstrate that our design worked, we built a prototype. An exact model could not be built, but the intention was to show that the system decreased in temperature. After allowing the system to cool for a few hours, the thermometer showed a decrease in temperature, showing that our solution worked. Although this design fell short of the target temperature, the cooling effect was apparent.</p>
 
-	<p class="text">Read the full report <a target="_blank" style= "color:#0000EE;" href="DesignReport.pdf">here</a>.</p>
+	<p class="text">Read the full report <a target="_blank" style= "color:#0000EE;" href="pdf/Freezing and Cooling Technologies Design Report.pdf">here</a>.</p>
 
 </main>
 <footer></footer>
