--- a/matlab.html
+++ b/matlab.html
@@ -36,12 +36,17 @@
 		</span>
 		<span class="portpad"></span>
 
+		<span class="cont" style="visibility:hidden">
+			<a href=""><img class = "portpics" src="img/planepic.jpg"></a>
+			<p class="cent">Flight Path</p>
+		</span>
+		<span class="portpad"></span>
 
 		</div>
 
-		<span></span>
+<!-- 		<span></span>
 		</div>
-
+ -->
 
 </main>
 <footer></footer>
