--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
 	<br><br>
 
 		<span class="cont">
-			<a href="fridge.html"><img class = "portpics" src="img/ice.jpg"></a>
+			<a href="fridge.html"><img class = "portpics" src="img/ice2.jpg"></a>
 			<p class="cent">Freezing and Cooling Technologies</p>
 		</span>
 		<span class="portpad"></span>
