--- a/windtunnel.html
+++ b/windtunnel.html
@@ -25,7 +25,7 @@
 	<div class = "boxP">
 	<p class="text">In AP Physics, we were challenged to build a device capable of measuring the forces of lift and drag on an airfoil and the speed of the air in the wind tunnel.</p>
 	<p class="text">Before we started building, we were required to provide a complete report describing our designs for the project, the equipment we would use, and the research and theory that confirmed our hypotheses, proving that our designs will work.</p>
-	<p class="text">Design Report: <a target="_blank" style= "color:#0000EE;" href="Prospectus.pdf"><u><i>Design and Force Analysis of a Wind Tunnel</i></u></a></p>
+	<p class="text">Design Report: <a target="_blank" style= "color:#0000EE;" href="pdf/1315-MH Wind Tunnel Prospectus.pdf"><u><i>Design and Force Analysis of a Wind Tunnel</i></u></a></p>
 	<p class="text">Upon completing the research, we decided to use load cells to measure lift and drag, a brushless motor from a RC aircraft to power the fan, a 7-segment display to show windspeed or forces, a differential pressure gauge to measure windspeed, and an Arduino Mega to control input from all the sensors.</p>
 
 	<img id= "forces" src="img/loadcell.jpg">
