Tea infuser description finished
- tea done
- unused images removed

--- a/3d.html
+++ b/3d.html
@@ -41,8 +41,8 @@
 					var captionText = document.getElementById("caption6");
 					img.onclick = function(){
 					    modal.style.display = "block";
-					    modalImg.src = "img/fsaeback2.png";
-					    captionText.innerHTML = "In Fall 2016 I joined the Formula Motorsports student design team. As part of this team, I created the chain guard for the 2017 racecar using Solidworks (shown in purple on the left). The part was designed in adherence to the competition rules, while improving the design of the 2016 chain guard design.";
+					    modalImg.src = "img/teaback.png";
+					    captionText.innerHTML = "As my first project using Solidworks surface modelling, I experimented with split line, delete face, boundary surface, trim and knit surfaces, and lofts among other features to model a set of silicone tea infusers.";
 					}
 
 					// Get the <span> element that closes the modal
@@ -106,7 +106,7 @@
 					img.onclick = function(){
 					    modal.style.display = "block";
 					    modalImg.src = "img/cellphoneback.png";
-					    captionText.innerHTML = "I designed this cell phone stand using Solidworks with the constraint of using 2 cubic inches of material maximum. The stand was designed to hold a Samsung S4 at two different angles in either orientation. After 3D printing the phone stand, the design proved to be effective.";
+					    captionText.innerHTML = "Using Solidworks I designed this cell phone stand with the constraint of using 2 cubic inches of material maximum. The stand was designed to hold a Samsung S4 at two different angles in either orientation. After 3D printing the phone stand, the design proved to be effective.";
 					}
 
 					// Get the <span> element that closes the modal
