Flight Path added

--- a/matlab.html
+++ b/matlab.html
@@ -31,7 +31,7 @@
 		<span class="portpad"></span>
 
 		<span class="cont">
-			<a href=""><img class = "portpics" src="img/planepic.jpg"></a>
+			<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
 			<p class="cent">Flight Path</p>
 		</span>
 		<span class="portpad"></span>
