Changed name of flightcurve.png
Changed html to match new name of image

--- a/flightpath.html
+++ b/flightpath.html
@@ -76,7 +76,7 @@
 	  As an example, this curve is plotted when V<sub>r</sub> = 72 ms<sup>-1</sup>, or approximately 140 knots.
 	</p>
 
-	<div class="imgCenter"><a target="_blank" href="https://www.desmos.com/calculator/iplnjsvkst"><img class="flight9" src="img/flightCurve.png"></a></div>
+	<div class="imgCenter"><a target="_blank" href="https://www.desmos.com/calculator/iplnjsvkst"><img class="flight9" src="img/flightcurve.png"></a></div>
 
 	<p class="text">This model shows that the clear altitude of 35 ft (10.7m) is reached at approximately 3.8 seconds after V<sub>r</sub> is reached:
 	$$\frac{6.5*V_r-191.115}{V_r}=3.8456$$
