Changed display name of project

--- a/matlab.html
+++ b/matlab.html
@@ -32,7 +32,7 @@
 
 		<span class="cont">
 			<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
-			<p class="cent">Flight Path</p>
+			<p class="cent">Airplane Trajectory</p>
 		</span>
 		<span class="portpad"></span>
 
