Moved experience to front page
Changed the way front page looks
Updated resume

--- a/garbageRobot.html
+++ b/garbageRobot.html
@@ -18,7 +18,7 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 
 	<p id = "titleF">Garbage Collector and Sorter Robot </p>
 	<p class = "padP"></p>
