--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/style3.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 		<header>
@@ -20,13 +21,15 @@
 				 	<img class = "back" src="img/background2.jpg">
 				</div>
 
-				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
+				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 
-				<div id="block">
-				<p class="iam">I am a <br> </p>
-			 	<div><p class="title"> Mechanical Engineer</p></div>
-			 	<a href="portfolio.html" class="button1">Portfolio</a>
-			 	<a href="experience.html" class="button2">Experience</a>
+				
+			 	<div><p class="title"> Kaarthic Pulogarajah</p></div>
+			 	<!-- <div id="block"> -->
+			 	<p class="titlepic"><img class="titlepics" src="img/kaarthic2.jpg" style="width: 23%;"></p>
+				<p class="iam">Mechanical Engineering Student</p><p id="iamUNI" class="iam">University of Waterloo <br> </p>
+			 	<!-- <a href="portfolio.html" class="button1">Portfolio</a> -->
+			 	<!-- <a href="experience.html" class="button2">Experience</a> -->
 			 	</div>
 
 			 	<p id = "pad"></p>
@@ -41,7 +44,7 @@
 						</div>
 						<div class="column">
 							<p class="about">Personal Philosophy </p>
-							<p>"Success is a journey, not a destination."</p>
+							<p>"Complexity is just a symptom of confusion."</p>
 							<img src="img/kaarthic.jpg" style="width: 80%;">
 						</div>
 						<div class="column">
@@ -61,10 +64,19 @@
 							<p class="cent">3D Modelling</p>
 						</div>
 						<div class="cont">
-							<a href="cpp.html"><img class="portpics" src="img/code.png"></a>
-							<p class="cent">C++ Projects</p>
+							<a href="matlab.html"><img class="portpics" src="img/matlabicon.png"></a>
+							<p class="cent">MATLAB Projects</p>
 						</div>
 					</div>
+
+						<h2>Contact</h2>
+						<div class="imgCenter">
+							<a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img class="logo" src="img/adobe.png">Resume</a>
+							<span style="margin-right: 25%"></span>
+							<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img class="logo" src="img/linkedin.png">LinkedIn</a>
+							<span style="margin-right: 25%"></span>
+							<a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img class="logo" src="img/github.png">Github</a>
+						</div>
 				</div>
 			</main>
 </body>
