--- a/matlab.html
+++ b/matlab.html
@@ -17,8 +17,8 @@
 <body>
 <main>
 
-		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
-
+		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+		
 		<p class = "titleP">MATLAB Projects</p>
 		<p class = "padP"></p>
 
