--- a/fridge.html
+++ b/fridge.html
@@ -18,8 +18,8 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "experience.html"><span style="float:right" >Experience</span></a>		<a href = "portfolio.html"><span style="float:right">Portfolio</span></a></div>
-
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	
 	<p id = "titleF">Freezing and Cooling Technologies 	</p>
 	<p class = "padP"></p>
 	<div class = "boxP">
