Made mobile friendly

--- a/flightpath.html
+++ b/flightpath.html
@@ -22,10 +22,10 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-
+	<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	
 	<p id = "titleF">Airplane Trajectory</p>
-	<p class = "padP"></p>
+	<!-- <p class = "padP"></p> -->
 	<div class = "boxP">
 
 	<p class="text">This project was undertaken as an investigation into a interesting question I came across when I started a new work position. My workplace was located very close to Toronto Pearson International Airport, and each day I would see and hear several airplanes flying overhead. I was curious how close to me the airplanes got on their takeoff path, and so I took it upon myself to model using Matlab the first few seconds of the trajectory of a typical aircraft taking off from Pearson Airport to solve this problem. Before I could successfully model an airplane's takeoff path, I had to research several topics: takeoff speeds of an airplane, angle of climb during takeoff, and the types of planes that took off from Pearson.</p>
