--- a/fridge.html
+++ b/fridge.html
@@ -18,10 +18,10 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 	
-	<p id = "titleF">Freezing and Cooling Technologies 	</p>
-	<p class = "padP"></p>
+	<p id = "titleF" style="text-align:left">Freezing and Cooling Technologies 	</p>
+	<!-- <p class = "padP"></p> -->
 	<div class = "boxP">
 
 	<p class="text">This project was intended as a submission to a NineSigma Innovation Contest: <a target="_blank" style= "color:#0000EE;" href="https://ninesights.ninesigma.com/web/unilever-gallery/needs-listing/-/needs-portlet/viewNeed?_NeedsPortlet_WAR_NeedPortletsportlet_needId=706"><u><i>New and Novel Freezing and Cooling Technologies</i></u></a></p>
