--- a/garbageRobot.html
+++ b/garbageRobot.html
@@ -18,10 +18,10 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-
-	<p id = "titleF">Garbage Collector and Sorter Robot </p>
-	<p class = "padP"></p>
+	<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	
+	<p id = "titleF" style="text-align:left">Garbage Collector and Sorter Robot </p>
+	<!-- <p class = "padP"></p> -->
 	<div class = "boxP">
 
 	<p class="text">The objective of this design project was to design an autonomous robot using Lego NXT Mindstorms that was capable of detecting garbage in its vicinity and sorting it after grabbing it with its claw. As this was a complex problem, it had to be broken into smaller functions: claw design, searching method, and lifting and sorting method. </p>
