--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
 				 	<img class = "back" src="img/background2.jpg">
 				</div>
 
-				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-
-				
-			 	<div><p class="title"> Kaarthic Pulogarajah</p></div>
+				<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+				<!-- <div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div> -->
+				 
+				<div><p class="title"> Kaarthic Pulogarajah</p></div>
 			 	<!-- <div id="block"> -->
-			 	<p class="titlepic"><img class="titlepics" src="img/kaarthic2.jpg" style="width: 23%;"></p>
+			 	<p class="titlepic"><img class="titlepics" src="img/kaarthic2.jpg"></p>
 				<p class="iam">Mechanical Engineering Student</p><p id="iamUNI" class="iam">University of Waterloo <br> </p>
-			 	<!-- <a href="portfolio.html" class="button1">Portfolio</a> -->
-			 	<!-- <a href="experience.html" class="button2">Experience</a> -->
 			 	</div>
 
 			 	<p id = "pad"></p>
@@ -45,7 +43,7 @@
 						<div class="column">
 							<p class="about">Personal Philosophy </p>
 							<p>"Complexity is just a symptom of confusion."</p>
-							<img src="img/kaarthic.jpg" style="width: 80%;">
+							<img class = "middlepic" src="img/kaarthic.jpg">
 						</div>
 						<div class="column">
 							<p class="about">Interests</p>
@@ -69,14 +67,6 @@
 						</div>
 					</div>
 
-						<h2>Contact</h2>
-						<div class="imgCenter">
-							<a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img class="logo" src="img/adobe.png">Resume</a>
-							<span style="margin-right: 25%"></span>
-							<a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img class="logo" src="img/linkedin.png">LinkedIn</a>
-							<span style="margin-right: 25%"></span>
-							<a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img class="logo" src="img/github.png">Github</a>
-						</div>
 				</div>
 			</main>
 </body>
