--- a/planetsim.html
+++ b/planetsim.html
@@ -18,10 +18,12 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	
 
-	<p id = "titleF">Planets Orbiting Simulation </p>
-	<p class = "padP"></p>
+	<p id = "titleF" >Planets Orbiting Simulation </p>
+	<!-- <p class = "padP"></p> -->
+
 	<div class = "boxP">
 
 	<p class="text">The objective of this project was to use Matlab to create an accurate 2-D simulation of the planets (and Pluto) orbiting the sun in our solar system. To acheieve this goal, I followed a several step procedure. The first step was to collect all relevant data on the planets in the solar system. This included number of orbit days, major and minor axes of the elliptical orbit, and tilt of the ellipse relative to standard position.</p>
