--- a/windtunnel.html
+++ b/windtunnel.html
@@ -18,10 +18,10 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-
+	<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	
 	<p id = "titleW">1315-MH Wind Tunnel</p>
-	<p class = "padP"></p>
+	<!-- <p class = "padP"></p> -->
 	<div class = "boxP">
 	<p class="text">In AP Physics, we were challenged to build a device capable of measuring the forces of lift and drag on an airfoil and the speed of the air in the wind tunnel.</p>
 	<p class="text">Before we started building, we were required to provide a complete report describing our designs for the project, the equipment we would use, and the research and theory that confirmed our hypotheses, proving that our designs will work.</p>
