--- a/flightpath.html
+++ b/flightpath.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style3.css">
 	<link rel="stylesheet" type="text/css" href="css/style4.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<script type="text/javascript" async
   		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
 	</script>
@@ -22,7 +23,7 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 	
 	<p id = "titleF">Airplane Trajectory</p>
 	<!-- <p class = "padP"></p> -->
