updating portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,14 @@
 
 	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 	
-	<p class = "titleP">Portfolio</p>
+	<p class = "titleP">Portfolio
+		<span id="eng_des" class="about" onclick="toggleHide()">Engineering Design</span>
+		<span id="eng_des" class="about" onclick="toggleHide()">Software Development</span>
+	</p>
 
 	<div class = "boxP">
 		
-		<div id="eng_des" class="about" onclick="toggleHide()"><span id="temp">Engineering Design</span></div>
+		
 		
 		<span id="hide1">
 			<span class="cont">
@@ -57,12 +60,12 @@
 				<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
 				<p class="cent">Assistive Technology</p>
 			</span>
+			<span class="portpad"></span>
 
 		</span>
-	</div>
-	<div class = "boxP">
+	
 
-		<div id="eng_des" class="about" onclick="toggleHide()">Software Development</div>
+		
 
 		<span id="hide2">
 			<span class="cont">
