updated portfolio page fully functional

--- a/archived/jul 22/index.html
+++ b/archived/jul 22/index.html
@@ -31,7 +31,7 @@
 				<p class="iam">Mechanical Engineering Student</p><p id="iamUNI" class="iam">University of Waterloo <br> </p>
 			 	</div>
 
-			 	<!-- <p id = "pad"></p> -->
+			 	<p id = "pad"></p>
 
 			 	<div class = "box">
 					<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
@@ -59,12 +59,12 @@
 							<p class="cent">1315-MH Wind Tunnel</p>
 						</div>
 						<div class="cont">
-							<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
-							<p class="cent">Battleship</p>
+							<a href="3d.html"><img class="portpics" src="img/trophy1.png"></a>
+							<p class="cent">3D Modelling</p>
 						</div>
 						<div class="cont">
-							<a href="planetsim.html"><img class = "portpics" src="img/planets.jpg"></a>
-							<p class="cent">Planets Simulation</p>
+							<a href="matlab.html"><img class="portpics" src="img/matlabicon.png"></a>
+							<p class="cent">MATLAB Projects</p>
 						</div>
 					</div>
 
